added jvm args for tomcat when running embedded container, ie grails run-war
without these, CAP would get PermGen errors as the default permgen space wasn't enough